--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "browserify-fs": "^1.0.0",
     "classnames": "^2.3.2",
+    "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-player": "^2.12.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0"
   },
